# gpt-neo-activation-data-collection

./: .gitignore  README.md  data_io.py  pyproject.toml
logs/: 2025-01-21.md
notebooks/: analyze_sae_features.ipynb
scripts/: __init__.py  collect_activations.py  extract_sae_features.py  train_autoencoder.py
src/: __init__.py  data_io.py
